--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -52,17 +52,18 @@ jobs:
       - name: 编译SmartDNS
         run: |
           # 执行编译脚本（根据平台和架构）
+          mkdir /root/output
           package/build-pkg.sh \
             --platform ${{ matrix.platform }} \
             --arch ${{ matrix.arch }} \
             --with-ui \
-            --outputdir ./output
+            --outputdir /root/output
 
       - name: 保存编译产物（使用最新版v4）
         uses: actions/upload-artifact@v4  # 解决deprecated问题
         with:
           name: smartdns-${{ matrix.platform }}-${{ matrix.arch }}
-          path: ./artifacts/  # 匹配所有类型产物（.ipk/.deb/.tar.gz等）
+          path: /root/output/*  # 匹配所有类型产物（.ipk/.deb/.tar.gz等）
 
   release:
     needs: build
@@ -75,7 +76,7 @@ jobs:
       - name: 下载所有编译产物（使用最新版v4）
         uses: actions/download-artifact@v4  # 解决deprecated问题
         with:
-          path: ./artifacts
+          path: /root/output
 
       - name: 创建GitHub Release
         uses: softprops/action-gh-release@v2
@@ -83,7 +84,7 @@ jobs:
           tag_name: auto-build-${{ github.sha }}
           name: 自动构建-${{ env.DATE }}
           body: 自动定时编译的SmartDNS安装包
-          files: ./artifacts/**/*
+          files: /root/output/**/*
           draft: false
           prerelease: false
         env:
