--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -52,17 +52,18 @@ jobs:
       - name: 编译SmartDNS
         run: |
           # 执行编译脚本（根据平台和架构）
+          mkdir package/output
           package/build-pkg.sh \
             --platform ${{ matrix.platform }} \
             --arch ${{ matrix.arch }} \
             --with-ui \
-            # --outputdir ./output
+            --outputdir ./output
 
       - name: 保存编译产物（使用最新版v4）
         uses: actions/upload-artifact@v4  # 解决deprecated问题
         with:
           name: smartdns-${{ matrix.platform }}-${{ matrix.arch }}
-          path: package/*  # 匹配所有类型产物（.ipk/.deb/.tar.gz等）
+          path: ./output/*  # 匹配所有类型产物（.ipk/.deb/.tar.gz等）
 
   release:
     needs: build
@@ -83,7 +84,8 @@ jobs:
           tag_name: auto-build-${{ github.sha }}
           name: 自动构建-${{ env.DATE }}
           body: 自动定时编译的SmartDNS安装包
-          files: ./artifacts/**/*
+          files: |
+            package/output/* 
           draft: false
           prerelease: false
         env:
