--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/upload-artifact@v4  # 解决deprecated问题
         with:
           name: smartdns-${{ matrix.platform }}-${{ matrix.arch }}
-          path: ./output/*  # 匹配所有类型产物（.ipk/.deb/.tar.gz等）
+          path: package/smartdns*  # 匹配所有类型产物（.ipk/.deb/.tar.gz等）
 
   release:
     needs: build
@@ -88,7 +88,7 @@ jobs:
           name: 自动构建-${{ env.DATE }}
           body: 自动定时编译的SmartDNS安装包
           files: |
-            package/output/* 
+            ./artifacts/* 
           draft: false
           prerelease: false
         env:
