--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -87,9 +87,6 @@ jobs:
           tag_name: auto-build-${{ github.sha }}
           name: 自动构建-${{ env.DATE }}
           body: 自动定时编译的SmartDNS安装包
-          files: |
-            ./artifacts/* 
+          files: ./artifacts/**/*  # 递归匹配所有子目录下的文件
           draft: false
           prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
