--- a/.github/workflows/debian_build.yml
+++ b/.github/workflows/debian_build.yml
@@ -66,8 +66,9 @@ jobs:
         run: |
           cd ${{ github.workspace }}
           # echo "release_tag=${{needs.get-version.outputs.CUR_VERSION}}_with_ui" >> $GITHUB_OUTPUT
-          echo "release_tag=smartdns_with_ui" >> $GITHUB_OUTPUT
+          echo "release_tag=${{ github.sha }}" >> $GITHUB_OUTPUT
           touch release.txt
+          echo "smartdns_with_ui" >> release.txt
           echo "同步更新上游代码" >> release.txt
           echo ${{ github.sha }} >> release.txt
           echo "status=success" >> $GITHUB_OUTPUT
