--- a/.github/workflows/static_build.yml
+++ b/.github/workflows/static_build.yml
@@ -6,6 +6,7 @@ on:
       - master
   pull_request:
     branches: [ "master" ]
+    types: [ "closed" ]
   workflow_dispatch:
     inputs:
       update-version-number:
